# alembic-metadata

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
scripts/: demonstrate_problem.py  demonstrate_solution.py  run_alembic_demo.sh  run_demo.sh
