[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alembic-metadata-demo"
version = "0.1.0"
description = "Demo project to reproduce SQLAlchemy Metadata schema issue with Alembic"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["packages"]
